change some plots

--- a/notebook/00-ss-预处理数据.ipynb
+++ b/notebook/00-ss-预处理数据.ipynb
@@ -982,6 +982,129 @@
    "source": [
     "这说明 green + blue 和 total 是一样的，总的水贸易量是蓝水和绿水的和"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test for genepy index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import sys\n",
+    "\n",
+    "test = np.random.random((32, 22))\n",
+    "sys.path.append(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02655797],\n",
+       "       [0.02624486],\n",
+       "       [0.02550361],\n",
+       "       [0.02730018],\n",
+       "       [0.02797273],\n",
+       "       [0.02854386],\n",
+       "       [0.02888577],\n",
+       "       [0.02919412],\n",
+       "       [0.02788898],\n",
+       "       [0.02837765],\n",
+       "       [0.02855981],\n",
+       "       [0.02745664],\n",
+       "       [0.02748719],\n",
+       "       [0.02799482],\n",
+       "       [0.02704802],\n",
+       "       [0.02740221],\n",
+       "       [0.02585195],\n",
+       "       [0.02889715],\n",
+       "       [0.02821023],\n",
+       "       [0.02663999],\n",
+       "       [0.02667998],\n",
+       "       [0.02879994],\n",
+       "       [0.0279819 ],\n",
+       "       [0.0277389 ],\n",
+       "       [0.0279151 ],\n",
+       "       [0.02883925],\n",
+       "       [0.02629056],\n",
+       "       [0.0272956 ],\n",
+       "       [0.02817643],\n",
+       "       [0.02654431],\n",
+       "       [0.02765735],\n",
+       "       [0.02755575]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from module.genepy_index import genepy_index\n",
+    "from module.trade_table import TradeTable\n",
+    "\n",
+    "TradeTable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02655797],\n",
+       "       [0.02624486],\n",
+       "       [0.02550361],\n",
+       "       [0.02730018],\n",
+       "       [0.02797273],\n",
+       "       [0.02854386],\n",
+       "       [0.02888577],\n",
+       "       [0.02919412],\n",
+       "       [0.02788898],\n",
+       "       [0.02837765],\n",
+       "       [0.02855981],\n",
+       "       [0.02745664],\n",
+       "       [0.02748719],\n",
+       "       [0.02799482],\n",
+       "       [0.02704802],\n",
+       "       [0.02740221],\n",
+       "       [0.02585195],\n",
+       "       [0.02889715],\n",
+       "       [0.02821023],\n",
+       "       [0.02663999],\n",
+       "       [0.02667998],\n",
+       "       [0.02879994],\n",
+       "       [0.0279819 ],\n",
+       "       [0.0277389 ],\n",
+       "       [0.0279151 ],\n",
+       "       [0.02883925],\n",
+       "       [0.02629056],\n",
+       "       [0.0272956 ],\n",
+       "       [0.02817643],\n",
+       "       [0.02654431],\n",
+       "       [0.02765735],\n",
+       "       [0.02755575]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
