--- a/notebook/02-ss-复杂性指数.ipynb
+++ b/notebook/02-ss-复杂性指数.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div id=adae208c-67d3-4647-bc20-106ea099c4a7 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('adae208c-67d3-4647-bc20-106ea099c4a7').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=b8672d21-e0b1-43de-a00a-02c93272f0f2 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('b8672d21-e0b1-43de-a00a-02c93272f0f2').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -242,7 +242,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div id=4798ae01-3ec2-4740-927c-8fd51b81250b style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('4798ae01-3ec2-4740-927c-8fd51b81250b').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "<div><div id=b50f6f58-9824-4c40-a998-973eccd6d768 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('b50f6f58-9824-4c40-a998-973eccd6d768').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -841,6 +841,164 @@
    "source": [
     "yellow_river_provinces"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-463df0a1a964>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "j = 2000\n",
+    "type(j)\n",
+    "j[0]\n",
+    "\n",
+    "\n",
+    "a = [2000, 2001, 2002]\n",
+    "type(a)\n",
+    "a[0]\n",
+    "\n",
+    "a.append(j)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mno\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Compute the arithmetic mean along the specified axis.\n",
+       "\n",
+       "Returns the average of the array elements.  The average is taken over\n",
+       "the flattened array by default, otherwise over the specified axis.\n",
+       "`float64` intermediate and return values are used for integer inputs.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "a : array_like\n",
+       "    Array containing numbers whose mean is desired. If `a` is not an\n",
+       "    array, a conversion is attempted.\n",
+       "axis : None or int or tuple of ints, optional\n",
+       "    Axis or axes along which the means are computed. The default is to\n",
+       "    compute the mean of the flattened array.\n",
+       "\n",
+       "    .. versionadded:: 1.7.0\n",
+       "\n",
+       "    If this is a tuple of ints, a mean is performed over multiple axes,\n",
+       "    instead of a single axis or all the axes as before.\n",
+       "dtype : data-type, optional\n",
+       "    Type to use in computing the mean.  For integer inputs, the default\n",
+       "    is `float64`; for floating point inputs, it is the same as the\n",
+       "    input dtype.\n",
+       "out : ndarray, optional\n",
+       "    Alternate output array in which to place the result.  The default\n",
+       "    is ``None``; if provided, it must have the same shape as the\n",
+       "    expected output, but the type will be cast if necessary.\n",
+       "    See `ufuncs-output-type` for more details.\n",
+       "\n",
+       "keepdims : bool, optional\n",
+       "    If this is set to True, the axes which are reduced are left\n",
+       "    in the result as dimensions with size one. With this option,\n",
+       "    the result will broadcast correctly against the input array.\n",
+       "\n",
+       "    If the default value is passed, then `keepdims` will not be\n",
+       "    passed through to the `mean` method of sub-classes of\n",
+       "    `ndarray`, however any non-default value will be.  If the\n",
+       "    sub-class' method does not implement `keepdims` any\n",
+       "    exceptions will be raised.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "m : ndarray, see dtype parameter above\n",
+       "    If `out=None`, returns a new array containing the mean values,\n",
+       "    otherwise a reference to the output array is returned.\n",
+       "\n",
+       "See Also\n",
+       "--------\n",
+       "average : Weighted average\n",
+       "std, var, nanmean, nanstd, nanvar\n",
+       "\n",
+       "Notes\n",
+       "-----\n",
+       "The arithmetic mean is the sum of the elements along the axis divided\n",
+       "by the number of elements.\n",
+       "\n",
+       "Note that for floating-point input, the mean is computed using the\n",
+       "same precision the input has.  Depending on the input data, this can\n",
+       "cause the results to be inaccurate, especially for `float32` (see\n",
+       "example below).  Specifying a higher-precision accumulator using the\n",
+       "`dtype` keyword can alleviate this issue.\n",
+       "\n",
+       "By default, `float16` results are computed using `float32` intermediates\n",
+       "for extra precision.\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> a = np.array([[1, 2], [3, 4]])\n",
+       ">>> np.mean(a)\n",
+       "2.5\n",
+       ">>> np.mean(a, axis=0)\n",
+       "array([2., 3.])\n",
+       ">>> np.mean(a, axis=1)\n",
+       "array([1.5, 3.5])\n",
+       "\n",
+       "In single precision, `mean` can be inaccurate:\n",
+       "\n",
+       ">>> a = np.zeros((2, 512*512), dtype=np.float32)\n",
+       ">>> a[0, :] = 1.0\n",
+       ">>> a[1, :] = 0.1\n",
+       ">>> np.mean(a)\n",
+       "0.54999924\n",
+       "\n",
+       "Computing the mean in float64 is more accurate:\n",
+       "\n",
+       ">>> np.mean(a, dtype=np.float64)\n",
+       "0.55000000074505806 # may vary\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/opt/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
